# ogl-template

./: CMakeLists.txt  README.md  conanfile.txt
src/: CMakeLists.txt  main.cpp  material.hpp
src/common/: CMakeLists.txt  application.cpp
